--- a/src/main/webapp/pedido.xhtml
+++ b/src/main/webapp/pedido.xhtml
@@ -20,7 +20,7 @@
 			<p:dataTable id="dataTable" var="qtdProd" selection="#{pedidoMB.selectedExcluirProdutos}" 
 				value="#{pedidoMB.listQtdProdutos}" paginator="true" rows="5"
 				paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-				rowsPerPageTemplate="5,10,15">
+				rowsPerPageTemplate="5,10,15" rowKey="#{qtdProd.produto.id}">
 				 <p:column selectionMode="multiple" style="width:16px;text-align:center"/>
 				<p:column>
 					<f:facet name="header">#</f:facet>
