--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -9,7 +9,7 @@
 
 		<li class="#{empty param.active || param.active == 'lista' ? 'active' : ''}">
 			<h:link outcome="listaProdutos">
-				<h:outputText value="#{msg['menu.lista']}" escape="false" />
+				<h:outputText value="#{msg['menu.lista.produtos']}" escape="false" />
 				<f:param name="active" value="lista" />
             </h:link>
 		</li>
@@ -18,6 +18,12 @@
 				<h:outputText value="#{msg['menu.incluir']}" escape="false" />
 				<f:param name="active" value="incluir" />
 			</h:link>
+		</li>
+		<li class="#{empty param.active || param.active == 'lista' ? 'active' : ''}">
+			<h:link outcome="listaPedidos">
+				<h:outputText value="#{msg['menu.lista.pedidos']}" escape="false" />
+				<f:param name="active" value="lista" />
+            </h:link>
 		</li>
 		<li class="divider"></li>
 		<li class="#{param.active == 'sobre' ? 'active' : ''}">
