incluir pedidos pronto - correção de mensagem de erro

--- a/src/main/webapp/listaPedidos.xhtml
+++ b/src/main/webapp/listaPedidos.xhtml
@@ -33,12 +33,12 @@
 					<h:outputText value="#{pedido.cliente.nome}" />
 				</p:column>
 	
-<!-- 				<p:column sortBy="#{pedido.qtdProdutos.size()}"> -->
-<!-- 					<f:facet name="header"> -->
-<!-- 						<h:outputText value="#{msg['label.pedido.qtdProdutos']}" /> -->
-<!-- 					</f:facet> -->
-<!-- 					<h:outputText value="#{pedido.qtdProdutos.size()}" /> -->
-<!-- 				</p:column> -->
+				<p:column sortBy="#{pedido.somatorioQtdProdutos}">
+					<f:facet name="header">
+						<h:outputText value="#{msg['label.pedido.qtdProdutos']}" />
+					</f:facet>
+					<h:outputText value="#{pedido.somatorioQtdProdutos}" />
+				</p:column>
 	
 				<p:column sortBy="#{pedido.preco}">
 					<f:facet name="header">
