--- a/src/main/webapp/formProduto.xhtml
+++ b/src/main/webapp/formProduto.xhtml
@@ -19,7 +19,7 @@
 					<h:inputText value="#{produtoMB.produto.nome}"
 						label="#{msg['label.produto.nome']}" required="true"
 						styleClass="input-large">
-						<f:validateLength minimum="5" maximum="60" />
+						<f:validateLength  maximum="60" />
 					</h:inputText>
 				</div>
 			</div>
@@ -31,7 +31,7 @@
 					<h:inputText value="#{produtoMB.produto.descricao}"
 						label="#{msg['label.produto.descricao']}" required="true"
 						styleClass="input-large">
-						<f:validateLength minimum="5" maximum="100" />
+						<f:validateLength  maximum="100" />
 					</h:inputText>
 				</div>
 			</div>
